--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,3 +18,24 @@
     max-width: 1920px;
     margin: 0 auto ;
 }
+
+/* -- -- HEADER -- -- */
+header{
+    width: 100%;
+    background-image: url(../img/bg-espacio.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+/* -- -- NAV -- --*/
+header nav{
+    width: 100%;
+}
+
+header nav .contenedor{
+    display: flex;
+}
+
+header nav .contenedor .logo{
+    font-family: orbitron;
+    font-size: 16px;
+}
