--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,6 +19,11 @@
     margin: 0 auto ;
 }
 
+.texto-normal{
+    font-family: orbitron;
+    font-size: 16px;
+}
+
 /* -- -- HEADER -- -- */
 header{
     width: 100%;
@@ -33,9 +38,4 @@ header nav{
 
 header nav .contenedor{
     display: flex;
-}
-
-header nav .contenedor .logo{
-    font-family: orbitron;
-    font-size: 16px;
 }
