--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,11 @@
     font-size: 16px;
 }
 
+.texto-titulo{
+    font-family: orbitron;
+    font-size: 64px;
+}
+
 /* -- -- HEADER -- -- */
 header{
     width: 100%;
@@ -32,6 +37,69 @@ header{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+header .contenedor{
+    display: flex;
+    flex-direction: column;
+}
+
+header .contenedor .titulo-header{
+    width: 100%;
+    margin: 80px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+header .contenedor .titulo-header h1{
+    margin: 0px;
+    text-align: center;
+    width: fit-content;
+    color: #fff;
+    background-color: #00A9FF;
+    padding: 53px 20px;
+    border-radius: 100%;
+}
+
+header .contenedor .contenedor-planetas{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header .contenedor .contenedor-planetas .planeta{
+    width: 10%;
+}
+
+header .contenedor .contenedor-planetas .planeta .imagen{
+    width: 100%;
+    margin-bottom: 24px;
+}
+
+header .contenedor .contenedor-planetas .planeta .imagen img{
+    width: 100%;
+    vertical-align: top;
+}
+
+header .contenedor .contenedor-planetas .planeta .nombre{
+    text-align: center;
+    margin-bottom: 14px;
+}
+
+header .contenedor .contenedor-planetas .planeta .nombre a{
+    color: #fff;
+    text-decoration: none;
+    padding: 8px 16px;
+    border: 4px solid transparent;
+}
+
+header .contenedor .contenedor-planetas .planeta .nombre a:hover{
+    border: 4px solid #00A9FF;
+    border-radius: 8px;
+}
+
 /* -- -- NAV -- --*/
 header nav{
     background-color: rgba(255, 255, 255, .1);
@@ -40,6 +108,7 @@ header nav{
 
 header nav .contenedor{
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
