--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,16 @@
     font-size: 16px;
 }
 
+.texto-mediano{
+    font-family: orbitron;
+    font-size: 24px;
+}
+
+.texto-grande{
+    font-family: orbitron;
+    font-size: 48px;
+}
+
 .texto-titulo{
     font-family: orbitron;
     font-size: 64px;
@@ -144,4 +154,81 @@ header nav .contenedor .menu a:last-child{
 header nav .contenedor .menu a:hover{
     background-color: #00A9FF;
     border-radius: 8px;
+}
+
+/* -- -- Mercurio -- -- */
+#mercurio{
+    width: 100%;
+    background-image: url(../img/bg-espacio.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#mercurio .contenedor{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#mercurio .contenedor .mercurio{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+#mercurio .contenedor .mercurio .imagen{
+    width: 50%;
+}
+
+#mercurio .contenedor .mercurio .imagen img{
+    width: 100%;
+    margin: 210px 0;
+}
+
+#mercurio .contenedor .caja-peso{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#mercurio .contenedor .caja-peso .contenido{
+    width: 90%;
+    text-align: center;
+    background-color: rgba(255, 255, 255, .25);
+    border-radius: 8px;
+}
+
+#mercurio .contenedor .caja-peso .contenido p{
+    margin: 40px 0;
+}
+
+#mercurio .contenedor .caja-peso .contenido form input, #mercurio .contenedor .caja-peso .contenido form button{
+    width: 20%;
+    background-color: transparent;
+    border: 4px solid #00A9FF;
+    border-radius: 8px;
+    text-align: center;
+}
+
+#mercurio .contenedor .caja-peso .contenido form button{
+    cursor: pointer;
+}
+
+#mercurio .contenedor .caja-peso .contenido p span{
+    color: #D0AA79;
+}
+
+#mercurio .contenedor .caja-peso .contenido .resultado{
+    display: flex;
+    justify-content: center;
+}
+
+#mercurio .contenedor .caja-peso .contenido .resultado .texto-grande{
+    width: fit-content;
+    color: #fff;
+    background-color: #00A9FF;
+    padding: 8px 16px;
+    border-radius: 8px;
+    margin-top: 0;
 }
