--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -387,7 +387,7 @@ header nav .contenedor .menu a:hover{
     margin-top: 0;
 }
 
-/* -- -- marte -- -- */
+/* -- -- Marte -- -- */
 #marte{
     width: 100%;
     background-image: url(../img/bg-espacio.jpg);
@@ -456,6 +456,83 @@ header nav .contenedor .menu a:hover{
 }
 
 #marte .contenedor .caja-peso .contenido .resultado .texto-grande{
+    width: fit-content;
+    color: #fff;
+    background-color: #00A9FF;
+    padding: 8px 16px;
+    border-radius: 8px;
+    margin-top: 0;
+}
+
+/* -- -- Jupiter -- -- */
+#jupiter{
+    width: 100%;
+    background-image: url(../img/bg-espacio.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#jupiter .contenedor{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#jupiter .contenedor .planeta{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+#jupiter .contenedor .planeta .imagen{
+    width: 50%;
+}
+
+#jupiter .contenedor .planeta .imagen img{
+    width: 100%;
+    margin: 210px 0;
+}
+
+#jupiter .contenedor .caja-peso{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#jupiter .contenedor .caja-peso .contenido{
+    width: 90%;
+    text-align: center;
+    background-color: rgba(255, 255, 255, .25);
+    border-radius: 8px;
+}
+
+#jupiter .contenedor .caja-peso .contenido p{
+    margin: 40px 0;
+}
+
+#jupiter .contenedor .caja-peso .contenido form input, #jupiter .contenedor .caja-peso .contenido form button{
+    width: 20%;
+    background-color: transparent;
+    border: 4px solid #00A9FF;
+    border-radius: 8px;
+    text-align: center;
+}
+
+#jupiter .contenedor .caja-peso .contenido form button{
+    cursor: pointer;
+}
+
+#jupiter .contenedor .caja-peso .contenido p span{
+    color: #F04729;
+}
+
+#jupiter .contenedor .caja-peso .contenido .resultado{
+    display: flex;
+    justify-content: center;
+}
+
+#jupiter .contenedor .caja-peso .contenido .resultado .texto-grande{
     width: fit-content;
     color: #fff;
     background-color: #00A9FF;
