--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -601,7 +601,7 @@ header nav .contenedor .menu a:hover{
 }
 
 #saturno .contenedor .caja-peso .contenido p span{
-    color: #F04729;
+    color: #FFAA5B;
 }
 
 #saturno .contenedor .caja-peso .contenido .resultado{
