--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -617,3 +617,80 @@ header nav .contenedor .menu a:hover{
     border-radius: 8px;
     margin-top: 0;
 }
+
+/* -- -- Urano -- -- */
+#urano{
+    width: 100%;
+    background-image: url(../img/bg-espacio.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#urano .contenedor{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#urano .contenedor .planeta{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+#urano .contenedor .planeta .imagen{
+    width: 50%;
+}
+
+#urano .contenedor .planeta .imagen img{
+    width: 100%;
+    margin: 210px 0;
+}
+
+#urano .contenedor .caja-peso{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#urano .contenedor .caja-peso .contenido{
+    width: 90%;
+    text-align: center;
+    background-color: rgba(255, 255, 255, .25);
+    border-radius: 8px;
+}
+
+#urano .contenedor .caja-peso .contenido p{
+    margin: 40px 0;
+}
+
+#urano .contenedor .caja-peso .contenido form input, #urano .contenedor .caja-peso .contenido form button{
+    width: 20%;
+    background-color: transparent;
+    border: 4px solid #00A9FF;
+    border-radius: 8px;
+    text-align: center;
+}
+
+#urano .contenedor .caja-peso .contenido form button{
+    cursor: pointer;
+}
+
+#urano .contenedor .caja-peso .contenido p span{
+    color: #FFAA5B;
+}
+
+#urano .contenedor .caja-peso .contenido .resultado{
+    display: flex;
+    justify-content: center;
+}
+
+#urano .contenedor .caja-peso .contenido .resultado .texto-grande{
+    width: fit-content;
+    color: #fff;
+    background-color: #00A9FF;
+    padding: 8px 16px;
+    border-radius: 8px;
+    margin-top: 0;
+}
