Actualizacion #urano - CSS

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -678,7 +678,7 @@ header nav .contenedor .menu a:hover{
 }
 
 #urano .contenedor .caja-peso .contenido p span{
-    color: #FFAA5B;
+    color: #91DAFA;
 }
 
 #urano .contenedor .caja-peso .contenido .resultado{
