--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -694,3 +694,80 @@ header nav .contenedor .menu a:hover{
     border-radius: 8px;
     margin-top: 0;
 }
+
+/* -- -- Neptuno -- -- */
+#neptuno{
+    width: 100%;
+    background-image: url(../img/bg-espacio.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#neptuno .contenedor{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#neptuno .contenedor .planeta{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+#neptuno .contenedor .planeta .imagen{
+    width: 50%;
+}
+
+#neptuno .contenedor .planeta .imagen img{
+    width: 100%;
+    margin: 210px 0;
+}
+
+#neptuno .contenedor .caja-peso{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#neptuno .contenedor .caja-peso .contenido{
+    width: 90%;
+    text-align: center;
+    background-color: rgba(255, 255, 255, .25);
+    border-radius: 8px;
+}
+
+#neptuno .contenedor .caja-peso .contenido p{
+    margin: 40px 0;
+}
+
+#neptuno .contenedor .caja-peso .contenido form input, #neptuno .contenedor .caja-peso .contenido form button{
+    width: 20%;
+    background-color: transparent;
+    border: 4px solid #00A9FF;
+    border-radius: 8px;
+    text-align: center;
+}
+
+#neptuno .contenedor .caja-peso .contenido form button{
+    cursor: pointer;
+}
+
+#neptuno .contenedor .caja-peso .contenido p span{
+    color: #0093B9;
+}
+
+#neptuno .contenedor .caja-peso .contenido .resultado{
+    display: flex;
+    justify-content: center;
+}
+
+#neptuno .contenedor .caja-peso .contenido .resultado .texto-grande{
+    width: fit-content;
+    color: #fff;
+    background-color: #00A9FF;
+    padding: 8px 16px;
+    border-radius: 8px;
+    margin-top: 0;
+}
