--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -773,3 +773,24 @@ header nav .contenedor .menu a:hover{
 }
 
 /* -- -- Footer -- -- */
+footer{
+    width: 100%;
+    background-color: #00A9FF;
+}
+
+footer .contenedor{
+    text-align: center;
+}
+
+footer .contenedor a i{
+    font-size: 24px;
+    color: #fff;
+    padding: 8px 16px;
+    border: 4px solid transparent;
+    margin: 16px 0;
+}
+
+footer .contenedor a i:hover{
+    border: 4px solid #fff;
+    border-radius: 8px;
+}
