--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,54 +156,54 @@ header nav .contenedor .menu a:hover{
     border-radius: 8px;
 }
 
-/* -- -- Mercurio -- -- */
-#mercurio{
+/* -- -- Seccion-planeta -- -- */
+.seccion-planeta{
     width: 100%;
     background-image: url(../img/bg-espacio.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-#mercurio .contenedor{
+.seccion-planeta .contenedor{
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-#mercurio .contenedor .planeta{
+.seccion-planeta .contenedor .planeta{
     width: 50%;
     display: flex;
     justify-content: center;
 }
 
-#mercurio .contenedor .planeta .imagen{
+.seccion-planeta .contenedor .planeta .imagen{
     width: 50%;
 }
 
-#mercurio .contenedor .planeta .imagen img{
+.seccion-planeta .contenedor .planeta .imagen img{
     width: 100%;
     margin: 210px 0;
 }
 
-#mercurio .contenedor .caja-peso{
+.seccion-planeta .contenedor .caja-peso{
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#mercurio .contenedor .caja-peso .contenido{
+.seccion-planeta .contenedor .caja-peso .contenido{
     width: 90%;
     text-align: center;
     background-color: rgba(255, 255, 255, .25);
     border-radius: 8px;
 }
 
-#mercurio .contenedor .caja-peso .contenido p{
+.seccion-planeta .contenedor .caja-peso .contenido p{
     margin: 40px 0;
 }
 
-#mercurio .contenedor .caja-peso .contenido form input, #mercurio .contenedor .caja-peso .contenido form button{
+.seccion-planeta .contenedor .caja-peso .contenido form input, .seccion-planeta .contenedor .caja-peso .contenido form button{
     width: 20%;
     background-color: transparent;
     border: 4px solid #00A9FF;
@@ -211,20 +211,16 @@ header nav .contenedor .menu a:hover{
     text-align: center;
 }
 
-#mercurio .contenedor .caja-peso .contenido form button{
+.seccion-planeta .contenedor .caja-peso .contenido form button{
     cursor: pointer;
 }
 
-#mercurio .contenedor .caja-peso .contenido p span{
-    color: #D0AA79;
-}
-
-#mercurio .contenedor .caja-peso .contenido .resultado{
+.seccion-planeta .contenedor .caja-peso .contenido .resultado{
     display: flex;
     justify-content: center;
 }
 
-#mercurio .contenedor .caja-peso .contenido .resultado .texto-grande{
+.seccion-planeta .contenedor .caja-peso .contenido .resultado .texto-grande{
     width: fit-content;
     color: #fff;
     background-color: #00A9FF;
@@ -233,543 +229,37 @@ header nav .contenedor .menu a:hover{
     margin-top: 0;
 }
 
-/* -- -- Venus -- -- */
-#venus{
-    width: 100%;
-    background-image: url(../img/bg-espacio.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#venus .contenedor{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#venus .contenedor .planeta{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-}
-
-#venus .contenedor .planeta .imagen{
-    width: 50%;
-}
-
-#venus .contenedor .planeta .imagen img{
-    width: 100%;
-    margin: 210px 0;
-}
-
-#venus .contenedor .caja-peso{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#venus .contenedor .caja-peso .contenido{
-    width: 90%;
-    text-align: center;
-    background-color: rgba(255, 255, 255, .25);
-    border-radius: 8px;
-}
-
-#venus .contenedor .caja-peso .contenido p{
-    margin: 40px 0;
-}
-
-#venus .contenedor .caja-peso .contenido form input, #venus .contenedor .caja-peso .contenido form button{
-    width: 20%;
-    background-color: transparent;
-    border: 4px solid #00A9FF;
-    border-radius: 8px;
-    text-align: center;
-}
-
-#venus .contenedor .caja-peso .contenido form button{
-    cursor: pointer;
+/* Color de span de cada planeta */
+#mercurio .contenedor .caja-peso .contenido p span{
+    color: #D0AA79;
 }
 
 #venus .contenedor .caja-peso .contenido p span{
     color: #FFD241;
 }
 
-#venus .contenedor .caja-peso .contenido .resultado{
-    display: flex;
-    justify-content: center;
-}
-
-#venus .contenedor .caja-peso .contenido .resultado .texto-grande{
-    width: fit-content;
-    color: #fff;
-    background-color: #00A9FF;
-    padding: 8px 16px;
-    border-radius: 8px;
-    margin-top: 0;
-}
-
-/* -- -- Tierra -- -- */
-#tierra{
-    width: 100%;
-    background-image: url(../img/bg-espacio.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#tierra .contenedor{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#tierra .contenedor .planeta{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-}
-
-#tierra .contenedor .planeta .imagen{
-    width: 50%;
-}
-
-#tierra .contenedor .planeta .imagen img{
-    width: 100%;
-    margin: 210px 0;
-}
-
-#tierra .contenedor .caja-peso{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#tierra .contenedor .caja-peso .contenido{
-    width: 90%;
-    text-align: center;
-    background-color: rgba(255, 255, 255, .25);
-    border-radius: 8px;
-}
-
-#tierra .contenedor .caja-peso .contenido p{
-    margin: 40px 0;
-}
-
-#tierra .contenedor .caja-peso .contenido form input, #tierra .contenedor .caja-peso .contenido form button{
-    width: 20%;
-    background-color: transparent;
-    border: 4px solid #00A9FF;
-    border-radius: 8px;
-    text-align: center;
-}
-
-#tierra .contenedor .caja-peso .contenido form button{
-    cursor: pointer;
-}
-
 #tierra .contenedor .caja-peso .contenido p span{
     color: #78D2FA;
-}
-
-#tierra .contenedor .caja-peso .contenido .resultado{
-    display: flex;
-    justify-content: center;
-}
-
-#tierra .contenedor .caja-peso .contenido .resultado .texto-grande{
-    width: fit-content;
-    color: #fff;
-    background-color: #00A9FF;
-    padding: 8px 16px;
-    border-radius: 8px;
-    margin-top: 0;
-}
-
-/* -- -- Marte -- -- */
-#marte{
-    width: 100%;
-    background-image: url(../img/bg-espacio.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#marte .contenedor{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#marte .contenedor .planeta{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-}
-
-#marte .contenedor .planeta .imagen{
-    width: 50%;
-}
-
-#marte .contenedor .planeta .imagen img{
-    width: 100%;
-    margin: 210px 0;
-}
-
-#marte .contenedor .caja-peso{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#marte .contenedor .caja-peso .contenido{
-    width: 90%;
-    text-align: center;
-    background-color: rgba(255, 255, 255, .25);
-    border-radius: 8px;
-}
-
-#marte .contenedor .caja-peso .contenido p{
-    margin: 40px 0;
-}
-
-#marte .contenedor .caja-peso .contenido form input, #marte .contenedor .caja-peso .contenido form button{
-    width: 20%;
-    background-color: transparent;
-    border: 4px solid #00A9FF;
-    border-radius: 8px;
-    text-align: center;
-}
-
-#marte .contenedor .caja-peso .contenido form button{
-    cursor: pointer;
 }
 
 #marte .contenedor .caja-peso .contenido p span{
     color: #F04729;
 }
 
-#marte .contenedor .caja-peso .contenido .resultado{
-    display: flex;
-    justify-content: center;
-}
-
-#marte .contenedor .caja-peso .contenido .resultado .texto-grande{
-    width: fit-content;
-    color: #fff;
-    background-color: #00A9FF;
-    padding: 8px 16px;
-    border-radius: 8px;
-    margin-top: 0;
-}
-
-/* -- -- Jupiter -- -- */
-#jupiter{
-    width: 100%;
-    background-image: url(../img/bg-espacio.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#jupiter .contenedor{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#jupiter .contenedor .planeta{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-}
-
-#jupiter .contenedor .planeta .imagen{
-    width: 50%;
-}
-
-#jupiter .contenedor .planeta .imagen img{
-    width: 100%;
-    margin: 210px 0;
-}
-
-#jupiter .contenedor .caja-peso{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#jupiter .contenedor .caja-peso .contenido{
-    width: 90%;
-    text-align: center;
-    background-color: rgba(255, 255, 255, .25);
-    border-radius: 8px;
-}
-
-#jupiter .contenedor .caja-peso .contenido p{
-    margin: 40px 0;
-}
-
-#jupiter .contenedor .caja-peso .contenido form input, #jupiter .contenedor .caja-peso .contenido form button{
-    width: 20%;
-    background-color: transparent;
-    border: 4px solid #00A9FF;
-    border-radius: 8px;
-    text-align: center;
-}
-
-#jupiter .contenedor .caja-peso .contenido form button{
-    cursor: pointer;
-}
-
 #jupiter .contenedor .caja-peso .contenido p span{
     color: #FF9B41;
-}
-
-#jupiter .contenedor .caja-peso .contenido .resultado{
-    display: flex;
-    justify-content: center;
-}
-
-#jupiter .contenedor .caja-peso .contenido .resultado .texto-grande{
-    width: fit-content;
-    color: #fff;
-    background-color: #00A9FF;
-    padding: 8px 16px;
-    border-radius: 8px;
-    margin-top: 0;
-}
-
-/* -- -- Saturno -- -- */
-#saturno{
-    width: 100%;
-    background-image: url(../img/bg-espacio.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#saturno .contenedor{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#saturno .contenedor .planeta{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-}
-
-#saturno .contenedor .planeta .imagen{
-    width: 50%;
-}
-
-#saturno .contenedor .planeta .imagen img{
-    width: 100%;
-    margin: 210px 0;
-}
-
-#saturno .contenedor .caja-peso{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#saturno .contenedor .caja-peso .contenido{
-    width: 90%;
-    text-align: center;
-    background-color: rgba(255, 255, 255, .25);
-    border-radius: 8px;
-}
-
-#saturno .contenedor .caja-peso .contenido p{
-    margin: 40px 0;
-}
-
-#saturno .contenedor .caja-peso .contenido form input, #saturno .contenedor .caja-peso .contenido form button{
-    width: 20%;
-    background-color: transparent;
-    border: 4px solid #00A9FF;
-    border-radius: 8px;
-    text-align: center;
-}
-
-#saturno .contenedor .caja-peso .contenido form button{
-    cursor: pointer;
 }
 
 #saturno .contenedor .caja-peso .contenido p span{
     color: #FFAA5B;
 }
 
-#saturno .contenedor .caja-peso .contenido .resultado{
-    display: flex;
-    justify-content: center;
-}
-
-#saturno .contenedor .caja-peso .contenido .resultado .texto-grande{
-    width: fit-content;
-    color: #fff;
-    background-color: #00A9FF;
-    padding: 8px 16px;
-    border-radius: 8px;
-    margin-top: 0;
-}
-
-/* -- -- Urano -- -- */
-#urano{
-    width: 100%;
-    background-image: url(../img/bg-espacio.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#urano .contenedor{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#urano .contenedor .planeta{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-}
-
-#urano .contenedor .planeta .imagen{
-    width: 50%;
-}
-
-#urano .contenedor .planeta .imagen img{
-    width: 100%;
-    margin: 210px 0;
-}
-
-#urano .contenedor .caja-peso{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#urano .contenedor .caja-peso .contenido{
-    width: 90%;
-    text-align: center;
-    background-color: rgba(255, 255, 255, .25);
-    border-radius: 8px;
-}
-
-#urano .contenedor .caja-peso .contenido p{
-    margin: 40px 0;
-}
-
-#urano .contenedor .caja-peso .contenido form input, #urano .contenedor .caja-peso .contenido form button{
-    width: 20%;
-    background-color: transparent;
-    border: 4px solid #00A9FF;
-    border-radius: 8px;
-    text-align: center;
-}
-
-#urano .contenedor .caja-peso .contenido form button{
-    cursor: pointer;
-}
-
 #urano .contenedor .caja-peso .contenido p span{
     color: #91DAFA;
 }
 
-#urano .contenedor .caja-peso .contenido .resultado{
-    display: flex;
-    justify-content: center;
-}
-
-#urano .contenedor .caja-peso .contenido .resultado .texto-grande{
-    width: fit-content;
-    color: #fff;
-    background-color: #00A9FF;
-    padding: 8px 16px;
-    border-radius: 8px;
-    margin-top: 0;
-}
-
-/* -- -- Neptuno -- -- */
-#neptuno{
-    width: 100%;
-    background-image: url(../img/bg-espacio.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#neptuno .contenedor{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#neptuno .contenedor .planeta{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-}
-
-#neptuno .contenedor .planeta .imagen{
-    width: 50%;
-}
-
-#neptuno .contenedor .planeta .imagen img{
-    width: 100%;
-    margin: 210px 0;
-}
-
-#neptuno .contenedor .caja-peso{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#neptuno .contenedor .caja-peso .contenido{
-    width: 90%;
-    text-align: center;
-    background-color: rgba(255, 255, 255, .25);
-    border-radius: 8px;
-}
-
-#neptuno .contenedor .caja-peso .contenido p{
-    margin: 40px 0;
-}
-
-#neptuno .contenedor .caja-peso .contenido form input, #neptuno .contenedor .caja-peso .contenido form button{
-    width: 20%;
-    background-color: transparent;
-    border: 4px solid #00A9FF;
-    border-radius: 8px;
-    text-align: center;
-}
-
-#neptuno .contenedor .caja-peso .contenido form button{
-    cursor: pointer;
-}
-
 #neptuno .contenedor .caja-peso .contenido p span{
     color: #0093B9;
-}
-
-#neptuno .contenedor .caja-peso .contenido .resultado{
-    display: flex;
-    justify-content: center;
-}
-
-#neptuno .contenedor .caja-peso .contenido .resultado .texto-grande{
-    width: fit-content;
-    color: #fff;
-    background-color: #00A9FF;
-    padding: 8px 16px;
-    border-radius: 8px;
-    margin-top: 0;
 }
 
 /* -- -- Footer -- -- */
